--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "concurrently --names api,app -c blue,green \"pnpm api:dev\" \"pnpm app:dev\"",
     "api:dev": "cd api && pnpm dev",
-    "app:dev": "cd app && pnpm dev"
+    "app:dev": "cd app && pnpm dev",
+    "create-environment": "cp app/src/.env.local.example app/src/.env.local && cp api/.dev.vars.example api/.dev.vars",
+    "create-environment-windows": "cd app/src && copy .env.local.example .env.local && cd ../../api && copy .dev.vars.example .dev.vars"
   },
   "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
   "devDependencies": {
