--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "irongeek.vscode-env",
     "dbaeumer.vscode-eslint",
     "tamasfe.even-better-toml",
-    "eamodio.gitlens"
+    "eamodio.gitlens",
+    "renesaarsoo.sql-formatter-vsc"
   ]
 }
