--- a/api/package.json
+++ b/api/package.json
@@ -6,19 +6,18 @@
   "scripts": {
     "dev": "wrangler dev"
   },
-  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67",
   "dependencies": {
-    "@trpc/server": "11.0.0-rc.608",
-    "bcryptjs": "^2.4.3",
+    "@trpc/server": "11.5.0",
+    "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
-    "zod": "^3.25.76"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250826.0",
-    "@types/bcryptjs": "^2.4.6",
+    "@cloudflare/workers-types": "^4.20250902.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
-    "wrangler": "^4.33.0"
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "wrangler": "^4.33.1"
   }
 }
